[build-system]
requires = ["setuptools","numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobs"
authors = [
    {name = "Mattia Bruno", email = "mattia.bruno@cern.ch"},
]
description = "A Python library to analyse (auto) correlated data"
license = {text = "GPL-2.0-only"}
readme = "README.md"
requires-python = ">=3.7"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv2",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "sympy",
    "scipy",
    "bison @ git+https://github.com/mbruno46/bison.git@main#egg=bison",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "pyobs/VERSION"}

[tool.setuptools.packages.find]
include = ["pyobs*"]  

[tool.setuptools]
include-package-data = true

[tool.coverage.run]
branch = true
parallel = true
omit = ['setup.py']
source = ['pyobs']
